--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                   <li style="margin-top: 0.35em">Crossing <span class="color2">Heap waste percentage</span> threshold triggers <strong class="color3">Space reclamation</strong> phase.</li>
                   <li style="margin-top: 0.35em">A <strong class="color2">Collection set (CSet)</strong> of <span class="color1">Young</span> &amp; <span class="color1">Tenured</span> regions picked for collection.</li>
                   <li style="margin-top: 0.35em">This <strong class="color1 dimbg"> Mixed Collection</strong> is made up to meet a <em class="color2">pause-time goal</em>.</li>
-                  <li style="margin-top: 0.35em">References to the objects in same generation or inter-generational) are tracked.</li>
+                  <li style="margin-top: 0.35em">References to objects (in same generation or inter-generational) are tracked.</li>
                   <li style="margin-top: 0.35em">References are tracked via <strong class="color2">Remembered sets (RSets)</strong> in a <span class="color2">Card table</span>.</li>
                   <li style="margin-top: 0.35em"><span class="color1">Mixed Collection</span> continues until heap waste percent below threshold.</li>
                   <li style="margin-top: 0.35em"><span class="color2">Humongous objects</span> processed in <span class="color1">Cleanup</span> phase and during <strong class="color2">Full GC</strong> .</li>
