Added a tester page.

--- a/tester.html
+++ b/tester.html
@@ -21,7 +21,7 @@
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
-    <link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="scaffolding/chandra.png" sizes="32x32"/>
 
     <script>
         // Printing and PDF exports
