Updated colors for the tester page.

--- a/tester.html
+++ b/tester.html
@@ -49,24 +49,24 @@
           <table width="100%">
             <tr style="border: hidden">
               <td width="65%" style="font-size: 0.9em; vertical-align: middle;border: hidden">
-                <span class="color1">Readability Test: </span><br/>
+                <span class="color1" style="font-size: 1.5em">Readability Test: </span><br/>
                 <ul>
                   <li style="margin-top: 0.35em"><em class="color2">italics in highlight color</em> normal text.</li>
                   <li style="margin-top: 0.35em">just normal text.</li>
-                  <li style="margin-top: 0.35em">normal text followed by <strong class="color3">Bold Emphatic set of words</strong> followed by normal.</li>
-                  <li style="margin-top: 0.35em"><strong class="color1 dimbg">Background colored bolded special words</strong> normal text <strong class="color2">Bold highlight text</strong>.</li>
-                  <li style="margin-top: 0.35em">line of normal text.</li>
-                  <li style="margin-top: 0.35em">Line 1: <span class="color1">Special words</span> normal text <span class="color2">highlighted words</span> normal text <span class="color1">special words</span>.</li>
-                  <li style="margin-top: 0.35em">Line 2: <span class="color1">Special words</span> normal text <span class="color2">highlighted words</span> normal text <span class="color1">special words</span>.</li>
-                  <li style="margin-top: 0.35em"><strong class="color1 dimbg">Background colored bolded special words</strong> normal text <strong class="color2">Bold highlight text</strong>.</li>
-                  <li style="margin-top: 0.35em"><strong class="color1 dimbg">Background colored bolded special words</strong> normal text <span class="color1">special words</span>.</li>
-                  <li style="margin-top: 0.35em">normal text <span class="color1">special words</span>, <strong class="color1 dimbg">Background colored bolded special words</strong>.</li>
-                  <li style="margin-top: 0.35em">Normal text <span class="color2">highlighted text</span> normal text <strong class="color3">bold emphatic words</strong>.</li>
+                  <li style="margin-top: 0.35em">normal text followed by <strong class="color3">bold emphatic set of words</strong> followed by normal.</li>
+                  <li style="margin-top: 0.35em"><strong class="color1 dimbg">Background colored bold special words</strong> normal text <strong class="color2">bold highlight text</strong>.</li>
+                  <li style="margin-top: 0.35em">line of <span class="dimbg">background colored normal text</span>.</li>
+                  <li style="margin-top: 0.35em"><span class="color1">Special words</span> normal text <span class="color2">highlighted words</span> <span class="color1">special words</span>.</li>
+                  <li style="margin-top: 0.35em"><span class="color1">Special words</span> normal text <span class="color2 dimbg">background colored highlighted words</span>.</li>
+                  <li style="margin-top: 0.35em"><strong class="color1 dimbg">Background colored bold special words</strong> normal text <strong class="color2">bold highlight text</strong>.</li>
+                  <li style="margin-top: 0.35em"><em class="color1 dimbg">Background colored italics special words</em> normal text <span class="color1">special words</span>.</li>
+                  <li style="margin-top: 0.35em">normal text <span class="color1">special words</span>, <strong class="color1 dimbg">background colored bold special words</strong>.</li>
+                  <li style="margin-top: 0.35em">Normal text <span class="color2">highlighted text</span> <strong class="color3 dimbg">background colored bold emphatic words</strong>.</li>
                   <li style="margin-top: 0.35em">Normal text <strong class="color2">bold highlighted text</strong> normal <span class="color1">special words</span> &amp; <span class="color1">special words</span>.</li>
                   <li style="margin-top: 0.35em">Normal text <strong class="color1 dimbg"> background colored bold special words</strong> text <em class="color2">italics highlighted.</em>.</li>
-                  <li style="margin-top: 0.35em">line of normal text.</li>
-                  <li style="margin-top: 0.35em">Normal text <strong class="color2">Bold highlighted text</strong> &Rarr; <span class="color2">highlighted text</span>.</li>
-                  <li style="margin-top: 0.35em"><span class="color1">Special words</span> normal text.</li>
+                  <li style="margin-top: 0.35em">Normal text <span class="color2">highlighted text</span> <em class="color3 dimbg">background colored italics emphatic words</em>.</li>
+                  <li style="margin-top: 0.35em">Normal text <strong class="color2">bold highlighted text</strong> <span class="color3">&rarr;&nbsp;&rarr;&nbsp;&rarr;</span> <span class="color2">highlighted text</span>.</li>
+                  <li style="margin-top: 0.35em"><span class="color1">Special words</span> normal text <em class="color2 dimbg">background colored italics highlighted text</em>.</li>
                   <li style="margin-top: 0.35em"><span class="color2">Special words</span> normal text <strong class="color2">bold highlighted text</strong>.</li>
                 </ul>
               </td>
